--- a/angular/angular.json
+++ b/angular/angular.json
@@ -65,6 +65,14 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -77,6 +85,9 @@
             },
             "development": {
               "browserTarget": "angular:build:development"
+            },
+            "mock": {
+              "browserTarget": "angular:build:mock"
             }
           },
           "defaultConfiguration": "development"
@@ -104,6 +115,16 @@
               "src/styles.scss"
             ],
             "scripts": []
+          },
+          "configurations": {
+            "mock": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.mock.ts"
+                }
+              ]
+            }
           }
         }
       }
